--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     -->
 
     <!-- Bootstrap core JavaScript-->
+    <canvas></canvas>
     <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
