--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="Dashboard e-commerce" />
     <meta name="author" content="Daniel Lontsi" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,37 +30,17 @@
     <!-- Custom styles for this template-->
     <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" />
 
-  
     <title>Dashboard e-commerce</title>
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
-      <div id="root">
-    </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
-    <!-- Bootstrap core JavaScript-->
-    <canvas></canvas>
+    <div id="root"></div>
     <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <!-- Core plugin JavaScript-->
     <script src="%PUBLIC_URL%/vendor/jquery-easing/jquery.easing.min.js"></script>
-
     <!-- Custom scripts for all pages-->
     <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>
-
-
     <!-- Page level custom scripts -->
   </body>
 </html>
